// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metadata browser animated.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 6,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 16,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 32,
  "pos": 5255,
  "text": {},
  "transparency": {},
  "width": 16,
}
`;

exports[`metadata browser black-white.png 1`] = `
{
  "bits": 1,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 1,
  "pos": 160,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser grayscale-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 8,
  "pos": 134,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser grayscale-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 16,
  "pos": 163,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser grayscale-alpha-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 4,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 16,
  "pos": 122,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser grayscale-alpha-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceGray",
  "colorType": 4,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 32,
  "pos": 2202,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser interlaced-grayscale-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [],
  "pixelBitlength": 8,
  "pos": 250,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser interlaced-pallete-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 3,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [
    34,
    68,
    0,
    245,
    255,
    237,
    119,
    255,
    119,
    203,
    255,
    255,
    17,
    10,
    0,
    58,
    119,
    0,
    34,
    34,
    255,
    255,
    17,
    255,
    17,
    0,
    0,
    34,
    34,
    0,
    255,
    172,
    85,
    102,
    255,
    102,
    255,
    102,
    102,
    255,
    1,
    255,
    34,
    18,
    0,
    220,
    255,
    255,
    204,
    255,
    153,
    68,
    68,
    255,
    0,
    85,
    85,
    34,
    0,
    0,
    203,
    203,
    255,
    68,
    68,
    0,
    85,
    255,
    85,
    203,
    203,
    0,
    51,
    26,
    0,
    255,
    236,
    220,
    237,
    255,
    255,
    228,
    255,
    203,
    255,
    220,
    220,
    68,
    255,
    68,
    102,
    102,
    255,
    51,
    0,
    0,
    68,
    34,
    0,
    237,
    237,
    255,
    102,
    102,
    0,
    255,
    164,
    68,
    255,
    255,
    170,
    237,
    237,
    0,
    0,
    203,
    203,
    254,
    255,
    255,
    253,
    255,
    254,
    255,
    255,
    1,
    51,
    255,
    51,
    85,
    42,
    0,
    1,
    1,
    255,
    136,
    136,
    255,
    0,
    170,
    170,
    1,
    1,
    0,
    68,
    0,
    0,
    136,
    136,
    0,
    255,
    228,
    203,
    186,
    91,
    0,
    34,
    255,
    34,
    102,
    50,
    0,
    255,
    255,
    153,
    170,
    170,
    255,
    85,
    0,
    0,
    170,
    170,
    0,
    203,
    99,
    0,
    17,
    255,
    17,
    212,
    255,
    170,
    119,
    58,
    0,
    255,
    68,
    68,
    220,
    107,
    0,
    102,
    0,
    0,
    1,
    255,
    1,
    136,
    66,
    0,
    236,
    255,
    220,
    107,
    220,
    0,
    255,
    220,
    186,
    0,
    51,
    51,
    0,
    237,
    0,
    237,
    115,
    0,
    255,
    255,
    136,
    153,
    74,
    0,
    17,
    255,
    255,
    119,
    0,
    0,
    255,
    131,
    1,
    255,
    186,
    186,
    254,
    123,
    0,
    255,
    254,
    255,
    0,
    203,
    0,
    255,
    153,
    153,
    34,
    255,
    255,
    136,
    0,
    0,
    255,
    255,
    119,
    0,
    136,
    136,
    255,
    220,
    255,
    26,
    51,
    0,
    0,
    0,
    170,
    51,
    255,
    255,
    0,
    153,
    0,
    153,
    0,
    0,
    0,
    0,
    1,
    50,
    102,
    0,
    255,
    186,
    255,
    68,
    255,
    255,
    255,
    170,
    255,
    0,
    119,
    0,
    0,
    254,
    254,
    170,
    0,
    0,
    74,
    153,
    0,
    255,
    255,
    102,
    255,
    34,
    34,
    0,
    0,
    153,
    139,
    255,
    17,
    85,
    255,
    255,
    255,
    1,
    1,
    255,
    136,
    255,
    0,
    85,
    0,
    0,
    17,
    17,
    255,
    255,
    254,
    255,
    253,
    254,
    164,
    255,
    68,
    102,
    255,
    255,
    255,
    102,
    255,
    0,
    51,
    0,
    255,
    255,
    85,
    255,
    119,
    119,
    0,
    0,
    136,
    255,
    68,
    255,
    0,
    17,
    0,
    119,
    255,
    255,
    0,
    102,
    102,
    255,
    255,
    237,
    0,
    1,
    0,
    255,
    245,
    237,
    17,
    17,
    255,
    255,
    255,
    68,
    255,
    34,
    255,
    255,
    237,
    237,
    17,
    17,
    0,
    136,
    255,
    255,
    0,
    0,
    119,
    147,
    255,
    34,
    0,
    220,
    220,
    51,
    51,
    255,
    254,
    0,
    254,
    186,
    186,
    255,
    153,
    255,
    255,
    51,
    51,
    0,
    99,
    203,
    0,
    186,
    186,
    0,
    172,
    255,
    85,
    255,
    255,
    220,
    255,
    255,
    51,
    123,
    254,
    0,
    237,
    0,
    237,
    85,
    85,
    255,
    170,
    255,
    255,
    220,
    220,
    255,
    85,
    85,
    0,
    0,
    0,
    102,
    220,
    220,
    0,
    220,
    0,
    220,
    131,
    255,
    1,
    119,
    119,
    255,
    254,
    254,
    255,
    255,
    255,
    203,
    255,
    85,
    85,
    119,
    119,
    0,
    254,
    254,
    0,
    203,
    0,
    203,
    0,
    0,
    254,
    1,
    2,
    0,
    1,
    0,
    0,
    18,
    34,
    0,
    255,
    255,
    34,
    0,
    68,
    68,
    155,
    255,
    51,
    255,
    212,
    170,
    0,
    0,
    85,
    153,
    153,
    255,
    153,
    153,
    0,
    186,
    0,
    186,
    42,
    85,
    0,
    255,
    203,
    203,
    180,
    255,
    102,
    255,
    155,
    51,
    255,
    255,
    186,
    170,
    0,
    170,
    66,
    136,
    0,
    83,
    170,
    0,
    255,
    170,
    170,
    0,
    0,
    237,
    0,
    186,
    186,
    255,
    255,
    17,
    0,
    254,
    0,
    0,
    0,
    68,
    0,
    153,
    153,
    153,
    0,
    153,
    255,
    204,
    153,
    186,
    0,
    0,
    136,
    0,
    136,
    0,
    220,
    0,
    255,
    147,
    34,
    0,
    0,
    220,
    254,
    255,
    254,
    170,
    83,
    0,
    119,
    0,
    119,
    2,
    1,
    0,
    203,
    0,
    0,
    0,
    0,
    51,
    255,
    237,
    255,
    0,
    186,
    0,
    255,
    51,
    51,
    237,
    255,
    237,
    255,
    196,
    136,
    188,
    255,
    119,
    0,
    170,
    0,
    102,
    0,
    102,
    0,
    34,
    34,
    220,
    0,
    0,
    255,
    203,
    255,
    220,
    255,
    220,
    255,
    139,
    17,
    0,
    0,
    203,
    0,
    1,
    1,
    85,
    0,
    85,
    0,
    136,
    0,
    0,
    0,
    34,
    1,
    255,
    255,
    203,
    255,
    203,
    237,
    0,
    0,
    255,
    136,
    136,
    68,
    0,
    68,
    91,
    186,
    0,
    255,
    188,
    119,
    255,
    153,
    255,
    0,
    102,
    0,
    186,
    255,
    186,
    0,
    119,
    119,
    115,
    237,
    0,
    254,
    0,
    0,
    51,
    0,
    51,
    0,
    0,
    186,
    255,
    119,
    255,
    0,
    68,
    0,
    170,
    255,
    170,
    255,
    254,
    254,
    0,
    0,
    17,
    34,
    0,
    34,
    196,
    255,
    136,
    0,
    237,
    237,
    153,
    255,
    153,
    255,
    85,
    255,
    0,
    34,
    0,
    255,
    180,
    102,
    17,
    0,
    17,
    10,
    17,
    0,
    255,
    17,
    17,
    220,
    255,
    186,
    186,
    255,
    255,
    136,
    255,
    136,
    1,
    0,
    1,
    255,
    51,
    255,
  ],
  "pixelBitlength": 8,
  "pos": 1523,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser interlaced-rgb-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [],
  "pixelBitlength": 24,
  "pos": 311,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser interlaced-rgb-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [],
  "pixelBitlength": 48,
  "pos": 591,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser interlaced-rgb-alpha-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 6,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [],
  "pixelBitlength": 32,
  "pos": 357,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser rgb-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 24,
  "pos": 141,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser rgb-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 48,
  "pos": 298,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser rgb-alpha-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 6,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 32,
  "pos": 180,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser rgb-alpha-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceRGB",
  "colorType": 6,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 64,
  "pos": 3431,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata browser transparent-black-grayscale-4bit.png 1`] = `
{
  "bits": 4,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 4,
  "pos": 425,
  "text": {},
  "transparency": {
    "grayscale": 0,
  },
  "width": 32,
}
`;

exports[`metadata browser transparent-white-grayscale-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 16,
  "pos": 1309,
  "text": {},
  "transparency": {
    "grayscale": 255,
  },
  "width": 32,
}
`;

exports[`metadata browser transparent-white-palette-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 3,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [
    255,
    255,
    255,
    128,
    86,
    86,
    181,
    181,
    184,
    168,
    66,
    66,
    159,
    159,
    159,
    177,
    32,
    32,
    139,
    21,
    21,
    157,
    157,
    157,
    27,
    27,
    89,
    155,
    155,
    155,
    0,
    0,
    132,
    153,
    153,
    153,
    143,
    167,
    143,
    151,
    151,
    151,
    149,
    149,
    149,
    147,
    147,
    147,
    41,
    41,
    86,
    145,
    145,
    145,
    0,
    0,
    155,
    143,
    143,
    143,
    139,
    149,
    139,
    46,
    46,
    167,
    141,
    141,
    141,
    128,
    0,
    0,
    139,
    139,
    139,
    185,
    0,
    0,
    137,
    137,
    137,
    12,
    12,
    213,
    120,
    117,
    117,
    135,
    135,
    135,
    0,
    0,
    178,
    133,
    133,
    133,
    165,
    0,
    0,
    222,
    0,
    0,
    129,
    129,
    129,
    127,
    127,
    127,
    0,
    0,
    158,
    125,
    125,
    125,
    0,
    0,
    201,
    123,
    123,
    123,
    121,
    121,
    121,
    55,
    55,
    86,
    119,
    119,
    119,
    117,
    117,
    117,
    115,
    115,
    115,
    72,
    169,
    72,
    142,
    0,
    0,
    2,
    2,
    100,
    0,
    0,
    98,
    86,
    137,
    86,
    40,
    40,
    124,
    83,
    139,
    83,
    137,
    137,
    143,
    103,
    103,
    103,
    101,
    101,
    101,
    93,
    109,
    93,
    19,
    229,
    19,
    134,
    38,
    38,
    111,
    45,
    45,
    68,
    145,
    68,
    97,
    97,
    97,
    59,
    157,
    59,
    68,
    137,
    68,
    61,
    147,
    61,
    0,
    0,
    164,
    0,
    243,
    0,
    0,
    241,
    0,
    89,
    89,
    89,
    87,
    87,
    87,
    85,
    85,
    85,
    83,
    83,
    83,
    52,
    133,
    52,
    81,
    81,
    81,
    36,
    151,
    36,
    79,
    79,
    79,
    58,
    58,
    65,
    16,
    16,
    186,
    178,
    15,
    15,
    0,
    199,
    0,
    0,
    197,
    0,
    252,
    252,
    252,
    0,
    195,
    0,
    4,
    4,
    151,
    0,
    193,
    0,
    45,
    119,
    45,
    250,
    250,
    250,
    0,
    191,
    0,
    0,
    0,
    104,
    0,
    189,
    0,
    218,
    212,
    212,
    16,
    16,
    123,
    9,
    173,
    9,
    248,
    248,
    248,
    0,
    185,
    0,
    0,
    183,
    0,
    156,
    156,
    161,
    246,
    246,
    246,
    12,
    161,
    12,
    0,
    179,
    0,
    0,
    177,
    0,
    16,
    145,
    16,
    0,
    171,
    0,
    242,
    242,
    242,
    0,
    169,
    0,
    0,
    167,
    0,
    238,
    238,
    238,
    236,
    236,
    236,
    0,
    151,
    0,
    234,
    234,
    234,
    0,
    0,
    107,
    0,
    141,
    0,
    0,
    139,
    0,
    0,
    137,
    0,
    0,
    135,
    0,
    49,
    49,
    49,
    25,
    25,
    42,
    7,
    7,
    64,
    18,
    18,
    174,
    9,
    9,
    238,
    211,
    214,
    211,
    204,
    204,
    204,
    147,
    0,
    0,
    163,
    42,
    42,
    198,
    198,
    198,
    196,
    196,
    196,
    204,
    0,
    0,
    211,
    10,
    10,
    129,
    107,
    107,
    120,
    62,
    62,
    3,
    3,
    109,
    0,
    0,
    159,
    10,
    10,
    86,
    70,
    70,
    72,
    65,
    65,
    77,
    115,
    93,
    93,
    81,
    7,
    7,
    168,
    168,
    168,
    237,
    237,
    239,
    160,
    160,
    160,
    158,
    158,
    158,
    156,
    156,
    156,
    0,
    0,
    185,
    154,
    154,
    154,
    178,
    0,
    0,
    152,
    152,
    152,
    235,
    0,
    0,
    150,
    150,
    150,
    158,
    0,
    0,
    148,
    148,
    148,
    19,
    19,
    28,
    146,
    146,
    146,
    144,
    144,
    144,
    142,
    142,
    142,
    0,
    0,
    145,
    138,
    138,
    138,
    136,
    136,
    136,
    118,
    162,
    118,
    133,
    136,
    133,
    134,
    134,
    134,
    132,
    132,
    132,
    120,
    15,
    15,
    130,
    130,
    130,
    126,
    130,
    126,
    126,
    126,
    126,
    124,
    124,
    124,
    122,
    122,
    122,
    74,
    192,
    74,
    118,
    118,
    118,
    116,
    116,
    116,
    114,
    114,
    114,
    112,
    112,
    112,
    152,
    0,
    0,
    110,
    110,
    110,
    106,
    112,
    106,
    122,
    102,
    102,
    106,
    106,
    106,
    132,
    0,
    0,
    68,
    162,
    68,
    75,
    150,
    75,
    97,
    100,
    97,
    98,
    98,
    98,
    0,
    244,
    0,
    56,
    152,
    56,
    92,
    92,
    92,
    90,
    90,
    90,
    0,
    230,
    0,
    2,
    2,
    93,
    66,
    120,
    66,
    86,
    86,
    86,
    0,
    0,
    240,
    46,
    148,
    46,
    71,
    104,
    71,
    49,
    49,
    96,
    0,
    216,
    0,
    82,
    82,
    82,
    80,
    80,
    80,
    0,
    206,
    0,
    33,
    152,
    33,
    20,
    20,
    109,
    0,
    200,
    0,
    76,
    76,
    76,
    253,
    253,
    253,
    0,
    198,
    0,
    0,
    0,
    157,
    111,
    107,
    107,
    234,
    14,
    14,
    72,
    72,
    72,
    0,
    188,
    0,
    52,
    102,
    52,
    2,
    2,
    245,
    83,
    83,
    96,
    0,
    176,
    0,
    0,
    174,
    0,
    183,
    0,
    0,
    0,
    164,
    0,
    239,
    239,
    239,
    0,
    162,
    0,
    143,
    79,
    79,
    149,
    52,
    52,
    0,
    152,
    0,
    0,
    150,
    0,
    0,
    146,
    0,
    231,
    231,
    231,
    0,
    140,
    0,
    227,
    227,
    227,
    0,
    128,
    0,
    146,
    6,
    6,
    1,
    1,
    111,
    100,
    86,
    89,
    0,
    0,
    100,
    78,
    78,
    107,
    207,
    207,
    207,
    221,
    221,
    224,
    0,
    0,
    123,
    201,
    201,
    201,
    22,
    22,
    65,
    33,
    33,
    89,
    87,
    87,
    89,
    68,
    68,
    120,
    191,
    191,
    191,
    235,
    221,
    221,
    45,
    45,
    84,
    10,
    10,
    96,
    0,
    0,
    255,
    191,
    125,
    125,
  ],
  "pixelBitlength": 8,
  "pos": 1492,
  "text": {},
  "transparency": {
    "indexed": [
      0,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
    ],
  },
  "width": 32,
}
`;

exports[`metadata browser transparent-white-rgb-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 48,
  "pos": 2037,
  "text": {},
  "transparency": {
    "rgb": [
      255,
      255,
      255,
      255,
      255,
      255,
    ],
  },
  "width": 32,
}
`;

exports[`metadata node animated.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 6,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 16,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 32,
  "pos": 5255,
  "text": {},
  "transparency": {},
  "width": 16,
}
`;

exports[`metadata node black-white.png 1`] = `
{
  "bits": 1,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 1,
  "pos": 160,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node grayscale-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 8,
  "pos": 134,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node grayscale-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 16,
  "pos": 163,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node grayscale-alpha-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 4,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 16,
  "pos": 122,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node grayscale-alpha-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceGray",
  "colorType": 4,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 32,
  "pos": 2202,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node interlaced-grayscale-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [],
  "pixelBitlength": 8,
  "pos": 250,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node interlaced-pallete-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 3,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [
    34,
    68,
    0,
    245,
    255,
    237,
    119,
    255,
    119,
    203,
    255,
    255,
    17,
    10,
    0,
    58,
    119,
    0,
    34,
    34,
    255,
    255,
    17,
    255,
    17,
    0,
    0,
    34,
    34,
    0,
    255,
    172,
    85,
    102,
    255,
    102,
    255,
    102,
    102,
    255,
    1,
    255,
    34,
    18,
    0,
    220,
    255,
    255,
    204,
    255,
    153,
    68,
    68,
    255,
    0,
    85,
    85,
    34,
    0,
    0,
    203,
    203,
    255,
    68,
    68,
    0,
    85,
    255,
    85,
    203,
    203,
    0,
    51,
    26,
    0,
    255,
    236,
    220,
    237,
    255,
    255,
    228,
    255,
    203,
    255,
    220,
    220,
    68,
    255,
    68,
    102,
    102,
    255,
    51,
    0,
    0,
    68,
    34,
    0,
    237,
    237,
    255,
    102,
    102,
    0,
    255,
    164,
    68,
    255,
    255,
    170,
    237,
    237,
    0,
    0,
    203,
    203,
    254,
    255,
    255,
    253,
    255,
    254,
    255,
    255,
    1,
    51,
    255,
    51,
    85,
    42,
    0,
    1,
    1,
    255,
    136,
    136,
    255,
    0,
    170,
    170,
    1,
    1,
    0,
    68,
    0,
    0,
    136,
    136,
    0,
    255,
    228,
    203,
    186,
    91,
    0,
    34,
    255,
    34,
    102,
    50,
    0,
    255,
    255,
    153,
    170,
    170,
    255,
    85,
    0,
    0,
    170,
    170,
    0,
    203,
    99,
    0,
    17,
    255,
    17,
    212,
    255,
    170,
    119,
    58,
    0,
    255,
    68,
    68,
    220,
    107,
    0,
    102,
    0,
    0,
    1,
    255,
    1,
    136,
    66,
    0,
    236,
    255,
    220,
    107,
    220,
    0,
    255,
    220,
    186,
    0,
    51,
    51,
    0,
    237,
    0,
    237,
    115,
    0,
    255,
    255,
    136,
    153,
    74,
    0,
    17,
    255,
    255,
    119,
    0,
    0,
    255,
    131,
    1,
    255,
    186,
    186,
    254,
    123,
    0,
    255,
    254,
    255,
    0,
    203,
    0,
    255,
    153,
    153,
    34,
    255,
    255,
    136,
    0,
    0,
    255,
    255,
    119,
    0,
    136,
    136,
    255,
    220,
    255,
    26,
    51,
    0,
    0,
    0,
    170,
    51,
    255,
    255,
    0,
    153,
    0,
    153,
    0,
    0,
    0,
    0,
    1,
    50,
    102,
    0,
    255,
    186,
    255,
    68,
    255,
    255,
    255,
    170,
    255,
    0,
    119,
    0,
    0,
    254,
    254,
    170,
    0,
    0,
    74,
    153,
    0,
    255,
    255,
    102,
    255,
    34,
    34,
    0,
    0,
    153,
    139,
    255,
    17,
    85,
    255,
    255,
    255,
    1,
    1,
    255,
    136,
    255,
    0,
    85,
    0,
    0,
    17,
    17,
    255,
    255,
    254,
    255,
    253,
    254,
    164,
    255,
    68,
    102,
    255,
    255,
    255,
    102,
    255,
    0,
    51,
    0,
    255,
    255,
    85,
    255,
    119,
    119,
    0,
    0,
    136,
    255,
    68,
    255,
    0,
    17,
    0,
    119,
    255,
    255,
    0,
    102,
    102,
    255,
    255,
    237,
    0,
    1,
    0,
    255,
    245,
    237,
    17,
    17,
    255,
    255,
    255,
    68,
    255,
    34,
    255,
    255,
    237,
    237,
    17,
    17,
    0,
    136,
    255,
    255,
    0,
    0,
    119,
    147,
    255,
    34,
    0,
    220,
    220,
    51,
    51,
    255,
    254,
    0,
    254,
    186,
    186,
    255,
    153,
    255,
    255,
    51,
    51,
    0,
    99,
    203,
    0,
    186,
    186,
    0,
    172,
    255,
    85,
    255,
    255,
    220,
    255,
    255,
    51,
    123,
    254,
    0,
    237,
    0,
    237,
    85,
    85,
    255,
    170,
    255,
    255,
    220,
    220,
    255,
    85,
    85,
    0,
    0,
    0,
    102,
    220,
    220,
    0,
    220,
    0,
    220,
    131,
    255,
    1,
    119,
    119,
    255,
    254,
    254,
    255,
    255,
    255,
    203,
    255,
    85,
    85,
    119,
    119,
    0,
    254,
    254,
    0,
    203,
    0,
    203,
    0,
    0,
    254,
    1,
    2,
    0,
    1,
    0,
    0,
    18,
    34,
    0,
    255,
    255,
    34,
    0,
    68,
    68,
    155,
    255,
    51,
    255,
    212,
    170,
    0,
    0,
    85,
    153,
    153,
    255,
    153,
    153,
    0,
    186,
    0,
    186,
    42,
    85,
    0,
    255,
    203,
    203,
    180,
    255,
    102,
    255,
    155,
    51,
    255,
    255,
    186,
    170,
    0,
    170,
    66,
    136,
    0,
    83,
    170,
    0,
    255,
    170,
    170,
    0,
    0,
    237,
    0,
    186,
    186,
    255,
    255,
    17,
    0,
    254,
    0,
    0,
    0,
    68,
    0,
    153,
    153,
    153,
    0,
    153,
    255,
    204,
    153,
    186,
    0,
    0,
    136,
    0,
    136,
    0,
    220,
    0,
    255,
    147,
    34,
    0,
    0,
    220,
    254,
    255,
    254,
    170,
    83,
    0,
    119,
    0,
    119,
    2,
    1,
    0,
    203,
    0,
    0,
    0,
    0,
    51,
    255,
    237,
    255,
    0,
    186,
    0,
    255,
    51,
    51,
    237,
    255,
    237,
    255,
    196,
    136,
    188,
    255,
    119,
    0,
    170,
    0,
    102,
    0,
    102,
    0,
    34,
    34,
    220,
    0,
    0,
    255,
    203,
    255,
    220,
    255,
    220,
    255,
    139,
    17,
    0,
    0,
    203,
    0,
    1,
    1,
    85,
    0,
    85,
    0,
    136,
    0,
    0,
    0,
    34,
    1,
    255,
    255,
    203,
    255,
    203,
    237,
    0,
    0,
    255,
    136,
    136,
    68,
    0,
    68,
    91,
    186,
    0,
    255,
    188,
    119,
    255,
    153,
    255,
    0,
    102,
    0,
    186,
    255,
    186,
    0,
    119,
    119,
    115,
    237,
    0,
    254,
    0,
    0,
    51,
    0,
    51,
    0,
    0,
    186,
    255,
    119,
    255,
    0,
    68,
    0,
    170,
    255,
    170,
    255,
    254,
    254,
    0,
    0,
    17,
    34,
    0,
    34,
    196,
    255,
    136,
    0,
    237,
    237,
    153,
    255,
    153,
    255,
    85,
    255,
    0,
    34,
    0,
    255,
    180,
    102,
    17,
    0,
    17,
    10,
    17,
    0,
    255,
    17,
    17,
    220,
    255,
    186,
    186,
    255,
    255,
    136,
    255,
    136,
    1,
    0,
    1,
    255,
    51,
    255,
  ],
  "pixelBitlength": 8,
  "pos": 1523,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node interlaced-rgb-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [],
  "pixelBitlength": 24,
  "pos": 311,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node interlaced-rgb-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [],
  "pixelBitlength": 48,
  "pos": 591,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node interlaced-rgb-alpha-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 6,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 1,
  "palette": [],
  "pixelBitlength": 32,
  "pos": 357,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node rgb-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 24,
  "pos": 141,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node rgb-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 48,
  "pos": 298,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node rgb-alpha-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceRGB",
  "colorType": 6,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 32,
  "pos": 180,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node rgb-alpha-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceRGB",
  "colorType": 6,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": true,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 64,
  "pos": 3431,
  "text": {},
  "transparency": {},
  "width": 32,
}
`;

exports[`metadata node transparent-black-grayscale-4bit.png 1`] = `
{
  "bits": 4,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 4,
  "pos": 425,
  "text": {},
  "transparency": {
    "grayscale": 0,
  },
  "width": 32,
}
`;

exports[`metadata node transparent-white-grayscale-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceGray",
  "colorType": 0,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 16,
  "pos": 1309,
  "text": {},
  "transparency": {
    "grayscale": 255,
  },
  "width": 32,
}
`;

exports[`metadata node transparent-white-palette-8bit.png 1`] = `
{
  "bits": 8,
  "colorSpace": "DeviceGray",
  "colorType": 3,
  "colors": 1,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [
    255,
    255,
    255,
    128,
    86,
    86,
    181,
    181,
    184,
    168,
    66,
    66,
    159,
    159,
    159,
    177,
    32,
    32,
    139,
    21,
    21,
    157,
    157,
    157,
    27,
    27,
    89,
    155,
    155,
    155,
    0,
    0,
    132,
    153,
    153,
    153,
    143,
    167,
    143,
    151,
    151,
    151,
    149,
    149,
    149,
    147,
    147,
    147,
    41,
    41,
    86,
    145,
    145,
    145,
    0,
    0,
    155,
    143,
    143,
    143,
    139,
    149,
    139,
    46,
    46,
    167,
    141,
    141,
    141,
    128,
    0,
    0,
    139,
    139,
    139,
    185,
    0,
    0,
    137,
    137,
    137,
    12,
    12,
    213,
    120,
    117,
    117,
    135,
    135,
    135,
    0,
    0,
    178,
    133,
    133,
    133,
    165,
    0,
    0,
    222,
    0,
    0,
    129,
    129,
    129,
    127,
    127,
    127,
    0,
    0,
    158,
    125,
    125,
    125,
    0,
    0,
    201,
    123,
    123,
    123,
    121,
    121,
    121,
    55,
    55,
    86,
    119,
    119,
    119,
    117,
    117,
    117,
    115,
    115,
    115,
    72,
    169,
    72,
    142,
    0,
    0,
    2,
    2,
    100,
    0,
    0,
    98,
    86,
    137,
    86,
    40,
    40,
    124,
    83,
    139,
    83,
    137,
    137,
    143,
    103,
    103,
    103,
    101,
    101,
    101,
    93,
    109,
    93,
    19,
    229,
    19,
    134,
    38,
    38,
    111,
    45,
    45,
    68,
    145,
    68,
    97,
    97,
    97,
    59,
    157,
    59,
    68,
    137,
    68,
    61,
    147,
    61,
    0,
    0,
    164,
    0,
    243,
    0,
    0,
    241,
    0,
    89,
    89,
    89,
    87,
    87,
    87,
    85,
    85,
    85,
    83,
    83,
    83,
    52,
    133,
    52,
    81,
    81,
    81,
    36,
    151,
    36,
    79,
    79,
    79,
    58,
    58,
    65,
    16,
    16,
    186,
    178,
    15,
    15,
    0,
    199,
    0,
    0,
    197,
    0,
    252,
    252,
    252,
    0,
    195,
    0,
    4,
    4,
    151,
    0,
    193,
    0,
    45,
    119,
    45,
    250,
    250,
    250,
    0,
    191,
    0,
    0,
    0,
    104,
    0,
    189,
    0,
    218,
    212,
    212,
    16,
    16,
    123,
    9,
    173,
    9,
    248,
    248,
    248,
    0,
    185,
    0,
    0,
    183,
    0,
    156,
    156,
    161,
    246,
    246,
    246,
    12,
    161,
    12,
    0,
    179,
    0,
    0,
    177,
    0,
    16,
    145,
    16,
    0,
    171,
    0,
    242,
    242,
    242,
    0,
    169,
    0,
    0,
    167,
    0,
    238,
    238,
    238,
    236,
    236,
    236,
    0,
    151,
    0,
    234,
    234,
    234,
    0,
    0,
    107,
    0,
    141,
    0,
    0,
    139,
    0,
    0,
    137,
    0,
    0,
    135,
    0,
    49,
    49,
    49,
    25,
    25,
    42,
    7,
    7,
    64,
    18,
    18,
    174,
    9,
    9,
    238,
    211,
    214,
    211,
    204,
    204,
    204,
    147,
    0,
    0,
    163,
    42,
    42,
    198,
    198,
    198,
    196,
    196,
    196,
    204,
    0,
    0,
    211,
    10,
    10,
    129,
    107,
    107,
    120,
    62,
    62,
    3,
    3,
    109,
    0,
    0,
    159,
    10,
    10,
    86,
    70,
    70,
    72,
    65,
    65,
    77,
    115,
    93,
    93,
    81,
    7,
    7,
    168,
    168,
    168,
    237,
    237,
    239,
    160,
    160,
    160,
    158,
    158,
    158,
    156,
    156,
    156,
    0,
    0,
    185,
    154,
    154,
    154,
    178,
    0,
    0,
    152,
    152,
    152,
    235,
    0,
    0,
    150,
    150,
    150,
    158,
    0,
    0,
    148,
    148,
    148,
    19,
    19,
    28,
    146,
    146,
    146,
    144,
    144,
    144,
    142,
    142,
    142,
    0,
    0,
    145,
    138,
    138,
    138,
    136,
    136,
    136,
    118,
    162,
    118,
    133,
    136,
    133,
    134,
    134,
    134,
    132,
    132,
    132,
    120,
    15,
    15,
    130,
    130,
    130,
    126,
    130,
    126,
    126,
    126,
    126,
    124,
    124,
    124,
    122,
    122,
    122,
    74,
    192,
    74,
    118,
    118,
    118,
    116,
    116,
    116,
    114,
    114,
    114,
    112,
    112,
    112,
    152,
    0,
    0,
    110,
    110,
    110,
    106,
    112,
    106,
    122,
    102,
    102,
    106,
    106,
    106,
    132,
    0,
    0,
    68,
    162,
    68,
    75,
    150,
    75,
    97,
    100,
    97,
    98,
    98,
    98,
    0,
    244,
    0,
    56,
    152,
    56,
    92,
    92,
    92,
    90,
    90,
    90,
    0,
    230,
    0,
    2,
    2,
    93,
    66,
    120,
    66,
    86,
    86,
    86,
    0,
    0,
    240,
    46,
    148,
    46,
    71,
    104,
    71,
    49,
    49,
    96,
    0,
    216,
    0,
    82,
    82,
    82,
    80,
    80,
    80,
    0,
    206,
    0,
    33,
    152,
    33,
    20,
    20,
    109,
    0,
    200,
    0,
    76,
    76,
    76,
    253,
    253,
    253,
    0,
    198,
    0,
    0,
    0,
    157,
    111,
    107,
    107,
    234,
    14,
    14,
    72,
    72,
    72,
    0,
    188,
    0,
    52,
    102,
    52,
    2,
    2,
    245,
    83,
    83,
    96,
    0,
    176,
    0,
    0,
    174,
    0,
    183,
    0,
    0,
    0,
    164,
    0,
    239,
    239,
    239,
    0,
    162,
    0,
    143,
    79,
    79,
    149,
    52,
    52,
    0,
    152,
    0,
    0,
    150,
    0,
    0,
    146,
    0,
    231,
    231,
    231,
    0,
    140,
    0,
    227,
    227,
    227,
    0,
    128,
    0,
    146,
    6,
    6,
    1,
    1,
    111,
    100,
    86,
    89,
    0,
    0,
    100,
    78,
    78,
    107,
    207,
    207,
    207,
    221,
    221,
    224,
    0,
    0,
    123,
    201,
    201,
    201,
    22,
    22,
    65,
    33,
    33,
    89,
    87,
    87,
    89,
    68,
    68,
    120,
    191,
    191,
    191,
    235,
    221,
    221,
    45,
    45,
    84,
    10,
    10,
    96,
    0,
    0,
    255,
    191,
    125,
    125,
  ],
  "pixelBitlength": 8,
  "pos": 1492,
  "text": {},
  "transparency": {
    "indexed": [
      0,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
      255,
    ],
  },
  "width": 32,
}
`;

exports[`metadata node transparent-white-rgb-16bit.png 1`] = `
{
  "bits": 16,
  "colorSpace": "DeviceRGB",
  "colorType": 2,
  "colors": 3,
  "compressionMethod": 0,
  "filterMethod": 0,
  "hasAlphaChannel": false,
  "height": 32,
  "interlaceMethod": 0,
  "palette": [],
  "pixelBitlength": 48,
  "pos": 2037,
  "text": {},
  "transparency": {
    "rgb": [
      255,
      255,
      255,
      255,
      255,
      255,
    ],
  },
  "width": 32,
}
`;
